fix horizontal scroll bar

--- a/src/styles/AboutMe.module.scss
+++ b/src/styles/AboutMe.module.scss
@@ -6,11 +6,10 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  width: 100vw;
-  margin: 0;
-  padding: 0;
+  width: 100%;
   color: $primary-colour;
   text-align: center;
+  overflow-x: hidden;
 
   background: linear-gradient(to bottom, #dff0fd 0%, #f9fbfd 50%, #ffffff 100%);
 
